welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:15: error: Unmatched closing brace '}' ignored here
}} 
 ^Methods:18: error: expected start of definition
	override def run() { 
                 ^Methods:26: error: Unmatched closing brace '}' ignored here
}
^